--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script data-ad-client="ca-pub-3193469056099321" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </body>
 
 </html>
